--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
 
   <script>
-    const message = `Do you long for Allah’s boundless love?
+    const message = `*Do you long for Allah’s boundless love?*
 
 This powerful dua asks Allah ﷻ — Al-Wadud, (The Most Loving) — to grant us His pure, boundless, and special love. The kind of love that surrounds the heart, transforms the soul, and uplifts every part of our being.
 
@@ -73,3 +73,4 @@ Ameen`;
   </script>
 </body>
 </html>
+
