--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ This powerful dua asks Allah ﷻ — Al-Wadud, (The Most Loving) — to grant us
 
 Because when Allah loves you, nothing else compares.
 
-“Allah said: My servant continues to draw near to Me with voluntary deeds until I love him…" — Hadith Qudsi (Bukhari)
+“Allah said: My servant continues to draw near to Me with voluntary deeds until I love him…” — Hadith Qudsi (Bukhari)
 
 *Ya Allah (O Allah), Ya Wadud (O Most Loving), grant us Your immense and special love, and pour it within our hearts and entire being. Surround us with it, encompass and envelop us with it, dress us with it, let its beautiful scent emanate strongly from us, and grant it to us without limit.*
 
@@ -35,21 +35,11 @@ Access the full supplication in both English and Arabic at: https://www.duashari
 
 When you share this post, you’re not simply sharing a dua. You’re opening the door to millions of people making sincere dua for you — with the Malaika (Angels) themselves saying “Ameen” to every single one.
 
-May Allah accept it from you, and from everyone it reaches through you.
+May Allah accept it from you, and reward you for all those it reaches through you.
 
 Ameen`;
 
-    const fallbacks = {
-      'ﷻ': 'ﷻ (may His Majesty be exalted)',
-      'ﷺ': 'ﷺ (peace be upon him)'
-    };
-
-    let messageWithFallback = message;
-    for (const [symbol, replacement] of Object.entries(fallbacks)) {
-      messageWithFallback = messageWithFallback.replace(new RegExp(symbol, 'g'), replacement);
-    }
-
-    const encodedText = encodeURIComponent(messageWithFallback);
+    const encodedText = encodeURIComponent(message);
     const waProtocol = "whatsapp://send?text=" + encodedText;
     const waWeb = "https://wa.me/?text=" + encodedText;
 
@@ -59,7 +49,7 @@ Ameen`;
     async function tryShare() {
       try {
         if (navigator.share) {
-          await navigator.share({ text: messageWithFallback });
+          await navigator.share({ text: message });
         } else {
           window.location.href = waProtocol;
           setTimeout(() => { window.location.href = waWeb; }, 1200);
@@ -73,4 +63,5 @@ Ameen`;
   </script>
 </body>
 </html>
+
 
